# ChatgptREST-review

./: .gitignore  FILE_INDEX.json  PROMPT_FOR_REVIEWERS.md  README.md  REVIEW_CONTEXT.md  REVIEW_SOURCE.json  SECRET_SCAN.json  external_review_jobs.json  pro_chatgpt_summary.json  pyproject.toml
.agents/: rules.md
chatgpt_web_mcp/: __init__.py  _answers.py  _netlog.py  _stealth.py  _tools_impl.py  config.py  env.py  idempotency.py  locks.py  mcp_registry.py  proxy.py  server.py
chatgptrest/: autoorch.py  cli.py  finbot.py  pipeline.py  telemetry_contract.py
checkpoints/: 2026-04-24_aop77_pause_create_issue_autopilot_checkpoint.md  2026-04-24_aop78_chief_dry_run_report_timer_checkpoint.md  2026-04-24_aop79_chief_mcp_skills_reconciliation_proposal_checkpoint.md  2026-04-24_asf17_hermes_chief_prompt_routing_contract_checkpoint.md  2026-04-24_asf18_chief_manifest_transition_checker_checkpoint.md  2026-04-24_asf23_chief_manifest_dry_run_harness_checkpoint.md
config/: agent_roles.yaml  controller_lanes.json  finbot_theme_catalog.json  provider_limits.json  routing_profile.json  team_gates.yaml  team_topologies.yaml  topology.yaml  work_memory_governance.yaml
docs/: 2026-03-15_execution_lineage_graph_walkthrough_v1.md  2026-03-15_finbot_continuous_discovery_blueprint_v1.md  2026-03-15_finbot_continuous_discovery_todo_v1.md  2026-03-15_finbot_continuous_discovery_walkthrough_v1.md  2026-03-15_finbot_feishu_ingress_rollout_v1.md  2026-03-15_finbot_live_rollout_walkthrough_v1.md  2026-03-15_main_finbot_delegation_prompt_contract_v1.md  (+77 more)
evidence/: chief_manifest.v0.json  (+7 more)
(+2226 files in other folders)
