[project]
name = "chatgptrest"
version = "0.1.0"
description = "REST-first job service + thin MCP adapter for ChatGPT Web automation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "mcp",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.30,<1",
  "claude-code-sdk>=0.0.25,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]
driver = [
  "httpx[socks]>=0.27,<1",
  "pillow>=10,<11",
  "playwright>=1.45,<2",
]
ops = [
  "sdnotify>=0.3",
]
v3 = [
  "anthropic>=0.45",
  "langgraph>=1.0",
  "langchain-core>=0.3",
  "numpy>=1.24",
  "fastembed>=0.7",
  "jieba>=0.42",
  "langfuse>=2.0",
  "msgpack>=1.0",
]

[project.scripts]
chatgptrestctl = "chatgptrest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatgptrest*", "chatgpt_web_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
